6-5 重构短信登录

--- a/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security-demo/src/main/resources/application.properties
@@ -32,6 +32,7 @@ imooc.security.browser.loginType = JSON
 # imooc.security.code.image.width = 200
 # 假如下面URL也需要图形验证码拦截
 # imooc.security.code.image.url = /user,/user/*
+imooc.security.code.sms.expireIn=600
 
 # QQ第三方登录的配置
 # imooc.security.social.qq.app-id = 101894738
