--- a/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security-demo/src/main/resources/application.properties
@@ -19,7 +19,8 @@ server.session.timeout = 600
 security.basic.enabled = false
 
 # 项目占用的端口
-server.port = 8060
+# server.port = 8060
+server.port = 80
 
 imooc.security.browser.loginType = JSON
 # 登录页面
