--- a/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security-demo/src/main/resources/application.properties
@@ -19,8 +19,8 @@ server.session.timeout = 600
 security.basic.enabled = false
 
 # 项目占用的端口
-# server.port = 8060
-server.port = 80
+server.port = 8060
+# server.port = 80
 
 imooc.security.browser.loginType = JSON
 # 登录页面
@@ -48,8 +48,11 @@ imooc.security.social.filterProcessesUrl = /qqLogin
 imooc.security.social.weixin.app-id = wxd99431bbff8305a0
 imooc.security.social.weixin.app-secret = 60f78681d063590a469f1b297feff3c4
 
-security.oauth2.client.clientId = imooc
-security.oauth2.client.clientSecret = imoocsecret
+# security.oauth2.client.clientId = imooc
+# security.oauth2.client.clientSecret = imoocsecret
 # security.oauth2.client.registered-redirect-uri =http://example.com
-
-
+imooc.security.oauth2.clients[0].clientId = imooc
+imooc.security.oauth2.clients[0].clientSecret = imoocsecret
+imooc.security.oauth2.clients[0].accessTokenValiditySeconds = 3600
+imooc.security.oauth2.clients[1].clientId = testId
+imooc.security.oauth2.clients[1].clientSecret = testSecret
