6-9 使用JWT替换默认令牌

--- a/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security-demo/src/main/resources/application.properties
@@ -43,7 +43,8 @@ imooc.security.social.qq.app-secret = 34211e019a56566f7d44f4fe58380e69
 imooc.security.browser.signUpUrl = /demo-signUp.html
 
 #imooc.security.social.qq.providerId = callback.do
-imooc.security.social.filterProcessesUrl = /qqLogin
+# À¹½ØURL
+# imooc.security.social.filterProcessesUrl = /qqLogin
 
 imooc.security.social.weixin.app-id = wxd99431bbff8305a0
 imooc.security.social.weixin.app-secret = 60f78681d063590a469f1b297feff3c4
@@ -53,6 +54,10 @@ imooc.security.social.weixin.app-secret = 60f78681d063590a469f1b297feff3c4
 # security.oauth2.client.registered-redirect-uri =http://example.com
 imooc.security.oauth2.clients[0].clientId = imooc
 imooc.security.oauth2.clients[0].clientSecret = imoocsecret
-imooc.security.oauth2.clients[0].accessTokenValiditySeconds = 3600
+imooc.security.oauth2.clients[0].accessTokenValiditySeconds = 3600000
 imooc.security.oauth2.clients[1].clientId = testId
 imooc.security.oauth2.clients[1].clientSecret = testSecret
+
+imooc.security.oauth2.storeType = jwt
+
+logging.level.root = debug
